# awa

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
awa/: Cargo.toml  README.md
awa-cli/: Cargo.toml  README.md  pyproject.toml
awa-cli/src/: main.rs
awa-macros/: README.md
awa-model/: Cargo.toml  README.md
awa-model/migrations/: v016_drop_queue_lanes_available_count.sql
awa-model/src/: admin.rs  dlq.rs  error.rs  insert.rs  lib.rs  migrations.rs  queue_storage.rs  sql_safety.rs
awa-model/tests/: queue_storage_copy_test.rs
awa-python/: Cargo.toml  README.md  pyproject.toml
awa-python/python/awa/: __main__.py  _awa.pyi  client.py
awa-python/scripts/: benchmark_runtime.py
awa-python/src/: client.rs
awa-python/tests/: test_awa.py  test_cli.py  test_dlq.py  test_start_config.py  test_sync.py  test_worker_dispatch.py
awa-seaorm/: Cargo.toml  README.md
awa-seaorm/src/: entity.rs  lib.rs  mapping.rs  repo.rs  sql.rs
awa-seaorm/tests/: callback.rs  lifecycle.rs  seaorm.rs
awa-testing/: README.md
awa-ui/: README.md
awa-ui/frontend/: package-lock.json
awa-ui/frontend/e2e/: seed.ts
awa-worker/: README.md
awa-worker/src/: cancel_listener.rs  client.rs  completion.rs  dispatcher.rs  maintenance.rs
awa/src/: lib.rs
awa/tests/: adapter_api_test.rs  benchmark_test.rs  chaos_suite_test.rs  integration_test.rs  lifecycle_hook_test.rs  migration_test.rs  postgres_failover_smoke_test.rs  progress_test.rs  queue_storage_benchmark_test.rs  queue_storage_runtime_test.rs  queue_storage_soak_test.rs  receipt_plane_chaos_test.rs  receipt_plane_regression_gate.rs  retention_test.rs  rolling_transition_rehearsal_test.rs  scale_test.rs  telemetry_test.rs  validation_test.rs
correctness/: README.md
correctness/storage/: AwaStorageLockOrder.cfg  AwaStorageLockOrder.tla  AwaStorageLockOrderDeadlockDemo.cfg  AwaStorageLockOrderOldStripedClaimDeadlock.cfg  MAPPING.md
docs/: architecture.md  benchmarking.md  bridge-adapters.md  configuration.md  getting-started-python.md  test-plan.md
docs/adr/: 008-copy-batch-ingestion.md  019-queue-storage-redesign.md  023-receipt-plane-ring-partitioning.md
docs/adr/bench/: 023-completion-write-amplification-2026-05-02.md
