[workspace]
resolver = "2"
members = [
    "awa-model",
    "awa-macros",
    "awa-metrics",
    "awa-worker",
    "awa",
    "awa-testing",
    "awa-cli",
    "awa-ui",
]
exclude = ["awa-python", "spike"]

[workspace.package]
version = "0.6.0-alpha.9"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Postgres-native background job queue — transactional enqueue, heartbeat crash recovery, SKIP LOCKED dispatch"
repository = "https://github.com/hardbyte/awa"
readme = "README.md"
keywords = ["postgres", "job-queue", "background-jobs", "async"]
categories = ["database", "asynchronous", "web-programming"]

[workspace.dependencies]
# Internal crates
awa-model = { path = "awa-model", version = "0.6.0-alpha.9" }
awa-macros = { path = "awa-macros", version = "0.6.0-alpha.9" }
awa-metrics = { path = "awa-metrics", version = "0.6.0-alpha.9" }
awa-worker = { path = "awa-worker", version = "0.6.0-alpha.9" }

# Database
sqlx = { version = "0.9", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate", "uuid"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
async-trait = "0.1"

# Error handling
thiserror = "2"

# Crypto
blake3 = "1"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Cron
croner = "2"

# Logging / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }

# CEL expressions (optional)
cel = { version = "0.13", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

# Proc macro
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
