[package]
name = "awa-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, queries, and migrations for the Awa job queue"
repository.workspace = true
readme = "README.md"

[features]
cel = ["dep:cel"]
tokio-postgres = ["dep:tokio-postgres"]

[dependencies]
awa-macros.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
blake3.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
time.workspace = true
croner.workspace = true
tracing.workspace = true
uuid.workspace = true
hex = "0.4"
cel = { workspace = true, optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
