[package]
name = "awa-python"
version = "0.6.0-alpha.7"
edition = "2021"

[lib]
name = "_awa"
crate-type = ["cdylib"]

[features]
default = ["cel"]
cel = ["awa-model/cel"]

[dependencies]
awa-model = { path = "../awa-model", version = "0.6.0-alpha.7" }
awa-worker = { path = "../awa-worker", version = "0.6.0-alpha.7", features = ["__python-bridge"] }
pyo3 = { version = "0.28", features = ["macros", "abi3-py310", "chrono"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
async-trait = "0.1"
pythonize = "0.28.0"

opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
