[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "awa-pg"
requires-python = ">=3.10"
version = "0.6.0-alpha.0"
description = "Postgres-native background job queue — Python SDK with async/sync workers, transactional enqueue, progress tracking, and web UI"
readme = {file = "../README.md", content-type = "text/markdown"}
license = {text = "MIT OR Apache-2.0"}
authors = [{name = "Brian Thorne"}]
keywords = ["postgres", "job-queue", "background-jobs", "async", "celery-alternative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
]
[project.urls]
Homepage = "https://github.com/hardbyte/awa"
Repository = "https://github.com/hardbyte/awa"
Documentation = "https://github.com/hardbyte/awa#readme"
Changelog = "https://github.com/hardbyte/awa/releases"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
python-source = "python"
module-name = "awa._awa"

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "django>=5.2",
    "greenlet>=3.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "sqlalchemy>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "chaos: exercises subprocess failure recovery, deadline rescue, and callback timeout rescue",
    "slow: tests that require leader election (up to 30s)",
]
